--- a/Applications/bsStoreApp/WebApi/appsettings.json
+++ b/Applications/bsStoreApp/WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sqlConnection": "Data Source=EFRUN\\SQLEXPRESS; Initial Catalog=bsStoreApp; Integrated Security=True; Trust Server Certificate=True"
+    "sqlConnection": "Data Source=EFRUN\\SQLEXPRESS; Initial Catalog=bsStoreAppDb; Integrated Security=True; Trust Server Certificate=True"
   }
 }
